--- a/views/pwEdit.ejs
+++ b/views/pwEdit.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
                 <ul class="header-profile-tab">
                     <li id="mobileView"><a href="/">게시판 리스트</a> </li>
                     <li><a href="/profile">프로필</a> </li>
-                    <li><button type="button" onclick="">로그아웃</button></li>
+                    <li><button type="button" onclick="userLogOut()">로그아웃</button></li>
                 </ul>
             </div>
         </div>
