--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/public/js/login/register.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
-    <title>Document</title>
+    <title>회원가입</title>
     <link rel="stylesheet" href="/public/css/register.css">
 </head>
 <body>
@@ -44,12 +44,6 @@
                     <label for="name">이름</label>
                     <input type="text" name="name" id="name" placeholder="이름"/><br/>
                 </div>
-                <!-- <button type="button" onclick="emailAuth()">인증</button>
-                    <br/>
-                    <div class="auth" id="auth" hidden>
-                        <input type="text" name="auth" placeholder="인증코드" required>
-                        <button type="button">확인</button>
-                    </div>     -->
                 <div class="select-info">
                     <div class="gender">
                         <label for="gender">성별</label>
