--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <link rel="stylesheet" href="/public/css/login.css">
     <script src="/public/js/login/login.js" defer></script>
-    <title>Document</title>
+    <title>로그인</title>
 </head>
 <body>
     <div class="login-container">
