css 분리, console.log 제거 필요 없는 주석 제거

--- a/public/css/profile/profileEdit.css
+++ b/public/css/profile/profileEdit.css
@@ -189,3 +189,25 @@ a.destroy {
     cursor: pointer;
     margin-left: 10px;
 }
+
+
+@media (max-width: 400px) {
+    .center-top-info {
+        flex-direction: column;
+    }
+
+    .info-set {
+        flex-basis: 100%;
+    }
+
+    .user-info {
+        background-color: #fff;
+        margin: 20px auto; 
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 800px;
+        max-height: 1300px;
+    }
+}
