--- a/views/findPw.ejs
+++ b/views/findPw.ejs
@@ -9,7 +9,7 @@
     <script src="/public/js/login/findPw.js" defer></script>
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="/public/css/header.css">
-    <link rel="stylesheet" href="/public/css/findPw.css">
+    <link rel="stylesheet" href="/public/css/login/findPw.css">
 </head>
 
 <body>
