--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
-    <link rel="stylesheet" href="/public/css/login.css">
+    <link rel="stylesheet" href="/public/css/login/login.css">
     <script src="/public/js/login/login.js" defer></script>
     <title>로그인</title>
 </head>
@@ -21,10 +21,6 @@
             <button type="button" onclick="userSignin()" class="login">로그인</button>
             <button type="button" onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
             <br />
-            <!-- <div class="remember-me">
-                <input type="checkbox" id="remember" checked>
-                <label for="remember">로그인 상태 유지</label>
-            </div> -->
             <div class="signup">
                 <a href="/register">계정 등록하기</a>
             </div>
