--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -8,7 +8,7 @@
     <title>프로필 수정</title>
     <link rel="stylesheet" href="/public/css/header.css">
     <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/profileEdit.css">
+    <link rel="stylesheet" href="/public/css/profile/profileEdit.css">
     <script src="/public/js/profile/profileEdit.js" defer></script>
 </head>
 
