--- a/views/pwEdit.ejs
+++ b/views/pwEdit.ejs
@@ -10,7 +10,7 @@
     <title>비밀번호 변경</title>
     <link rel="stylesheet" href="/public/css/header.css">
     <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/pwEdit.css">
+    <link rel="stylesheet" href="/public/css/login/pwEdit.css">
 </head>
 
 <body>
