--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <title>회원가입</title>
-    <link rel="stylesheet" href="/public/css/register.css">
+    <link rel="stylesheet" href="/public/css/login/register.css">
 </head>
 <body>
     <div class="header">
