--- a/views/findId.ejs
+++ b/views/findId.ejs
@@ -9,7 +9,7 @@
     <script src="/public/js/login/findId.js" defer></script>
     <title>아이디 찾기</title>
     <link rel="stylesheet" href="/public/css/header.css">
-    <link rel="stylesheet" href="/public/css/findId.css">
+    <link rel="stylesheet" href="/public/css/login/findId.css">
 </head>
 
 <body>
