--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,6 @@
 
     <script src="/public/js/index_modal.js" defer></script>
     <link rel="stylesheet" href="/public/css/index_modal.css">
-
 </head>
 <body>  
 
@@ -79,25 +78,25 @@
                     <p>김민영</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/k-minyoung"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
                 </div>
                 <div>
                     <p>김성제</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/aymrm"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
                 </div>
                 <div>
                     <p>류승기</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/eukkki210"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
                 </div>
                 <div>
                     <p>정인근</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/raddadda"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/justin-jig"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
                 </div>
                 <div>
                     <p>최영찬 </p>
