--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -143,7 +143,7 @@
             <div class="list-container" id="bookmarkList">
                 <!-- 북마크한 게시물 목록 -->
                 <div class="category-list">
-                    <div class="board-wrap" id="wrap"></div>
+                    <div class="board-wrap profile-board-wrap" id="wrap"></div>
                     <div class="board-detail-modal" id="boardDetailModal"></div>
                 </div>
             </div>
