--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,25 +72,25 @@
                     <p>김민영</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/k-minyoung"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/k-minyoung"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/k-minyoung</a>
                 </div>
                 <div>
                     <p>김성제</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/aymrm"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/aymrm"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/aymrm</a>
                 </div>
                 <div>
                     <p>류승기</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/eukkki210"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/eukkki210"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/eukkki210</a>
                 </div>
                 <div>
                     <p>정인근</p>
                 </div>
                 <div>
-                    <p><a href="https://github.com/justin-jig"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/raddadda</a>
+                    <p><a href="https://github.com/justin-jig"><img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/giticon.png" style="width: 20px; position: relative; top: 5px;"> github.com/justin-jig</a>
                 </div>
                 <div>
                     <p>최영찬 </p>
