lastgit add .git add .

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -183,7 +183,7 @@
             <hr>
             <p class="footer-project-info">
                 <span>back-end socket project</span>
-                실시간 채팅 및 동시 영상시청 웹 애플리케이션
+                실시간 채팅 웹 애플리케이션
             </p>
             </p>
             <p class="footer-team-name">Copyright © 2023 socket-chat project</p>
