--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             </ul>
             <div class="header-profie">
                 <div class="profile"  onclick="toggleHeaderProfile()">
-                    <img src="https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/test_1280.jpg" alt="profile_image" />
+                    <img src="<%= profileImage %>" alt="profile_image" />
                 </div>
                 <span class="allow" onclick="toggleHeaderProfile()">▼</span>
                 <ul class="header-profile-tab">
