--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,6 +126,7 @@
         /**  board list 관련 **/
         let list = [];
         let page_id = 0;
+        let board_index = 0;
         var currentDirection = ''; // 현재의 방향을 나타내는 변수
         var lastScrollTop = 0; // 방향을 구하기 위해 사용되는 변수
         (async function () {
@@ -174,8 +175,8 @@
 
                         }
 
-                        boxhtml += await list_item(i, data);
-
+                        boxhtml += await list_item(board_index, data);
+                        board_index+=1;
                         if (findAllData.length === i + 1) {
                             page_id = findAllData[i].id + 1;
 
